# norm

./: .gitignore  CMakeLists.txt  Cargo.toml  Compiler.cpp  README.md  def.h  global.h  install.sh  main.cpp  sprout-compiler.pro  sprout.pro
Source/: Compiler.cpp  Compiler.h  irbis.pro  main.cpp
Source/Core/: Defines.h  Utils.h
compiler/: compiler.pro
compiler/src/: compiler.cpp  compiler.h  defines.h  macro.h  main.cpp
include/sprout/: SproutC  SproutDb  macro.h  project.h  sproutc.h  sproutdb.h  version.h
norm/: CMakeLists.txt  Cargo.toml
norm-common/src/: CMakeLists.txt
norm-common/src/norm/: Builder.cpp  Builder.h
norm-common/src/norm/io/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h
norm-common/src/norm/token/: Function.cpp  Function.h  Identifier.cpp  Identifier.h  Project.cpp  Project.h  Token.cpp  Token.h
norm-common/src/norm/token/expression/: BlockExpression.cpp  BlockExpression.h  Expression.cpp  Expression.h  LiteralExpression.cpp  LiteralExpression.h  OperatorExpression.cpp  OperatorExpression.h
norm-common/src/norm/token/item/: Function.cpp  Function.h  Item.cpp  Item.h
norm-common/src/norm/token/project/: BinaryProject.cpp  BinaryProject.h  LibraryProject.cpp  LibraryProject.h  Project.cpp  Project.h
norm-common/src/norm/token/statement/: AssignStatement.cpp  AssignStatement.h  Statement.cpp  Statement.h
norm-common/src/norm/token/type/: Integer.cpp  Integer.h  Type.cpp  Type.h
norm-common/src/token/: Project.h  Token.cpp  Token.h
norm-compiler/: Cargo.toml
norm-compiler/app/: CMakeLists.txt
norm-compiler/src/compiler/: mod.rs
norm-shell/: Cargo.toml
norm-shell/src/: main.rs
norm/app/: CMakeLists.txt
norm/src/: main.rs
sprout-app/: main.cpp  sprout-app.pro
sprout-app/src/: main.cpp
sprout-c/: sprout-c.pro
sprout-c/src/: defines.cpp  defines.h  sproutc.cpp  sproutc.h  version.h
sprout-db/: sprout-db.pro
sprout-db/src/: project.cpp  project.h  sproutdb.cpp
sprout-lib/: sprout-lib.pro
sprout-lib/src/: def.h
sproutapp/: sproutapp.pro
sproutapp/src/: main.cpp
sproutc/: sproutc.pro
sproutc/src/: defines.cpp  defines.h  sproutc.h
sproutdb/: sproutdb.pro
sproutlib/: sproutlib.pro
src/: Compiler.cpp  Macro.h  Transpiler.cpp  compiler.cpp  compiler.h  main.cpp  main.rs  norm.pro  transpiler.cpp  transpiler.h
src/compiler/: mod.rs
src/norm/: lib.rs  router.rs
src/norm/project/: application.rs  library.rs  mod.rs
src/project/: header.rs  mod.rs  token.rs
