[package]
name = "norm"
version = "0.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"
description = "Command-line interface (CLI) for managing Norm code"
repository = "https://github.com/krre/norm"

[lib]
name = "norm"
path = "src/norm/lib.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_derive = "4.5.32"
